--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -58,6 +58,7 @@ $font-family: 'Space Grotesk', sans-serif;
 // margin
 // margin size
 $mzero: 0px;
+$ms-xs: 0.25rem; // 4.5px
 $ms: 0.5rem; //9px
 $ms-1: 1rem; //18px
 $ms-2: 1.5rem; //27px
@@ -71,6 +72,7 @@ $ms-9: 4.5rem; // 81px
 $m-auto: auto; // auto
 // padding
 $p-0: 0;
+$ps-xs: 0.25rem; // 4.5px
 $ps: 0.5rem; //9px
 $ps-a: 0.75rem; //13px
 $ps-1: 1rem; //18px
